fixed unreadable paragraphs in homepage

--- a/src/styles/BookingPage.css
+++ b/src/styles/BookingPage.css
@@ -28,7 +28,7 @@ h1 {
   color: #F4CE14;
 }
 
-p {
+#booking-desc {
   font-family: "karla", sans-serif;
   font-size: 16px;
   color: #FFF;
